feat: 代码部分契约修改